side button text alignment fixed again

--- a/style.css
+++ b/style.css
@@ -97,12 +97,13 @@ a.navbar-brand{
     width:25%;
     display: flex;
     flex-direction: column;
-   
+   text-align:center;
 }
 .lsbutton h1{
     display:block;
     font-size:12px;
         color:red;
+        tex
     }
     
 }
